[tool.poetry]
name = "wave-viewer"
version = "0.2.2"
description = "A simple GUI for viewing waveforms."
authors = ["Jiahao Yuan <kaho0769@qq.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kahojyun/wave-viewer"
packages = [{include = "wave_viewer"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
vispy = "^0.13.0"
pyside6 = "^6.5.0"
pyqtgraph = "^0.13.3"
pyopengl = "^3.1.7"
pyopengl-accelerate = "^3.1.7"


[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = false
branch = "main"
build_command = "poetry build"
dist_path = "dist/"
upload_to_repository = false
upload_to_release = false